# cedh-stats

./: .env  .gitignore  Cargo.toml  codegen.ts  deploy.yaml  graphql.config.yml  message.md  package-lock.json  package.json  pnpm-lock.yaml  schema.graphql  svelte.config.mjs  tsconfig.json  tsconfig.scripts.json
.cache/: top-commanders.json
.cache/Thrasios%2C%20Triton%20Hero%20%2F%20Tymna%20the%20Weaver/: commander-data.json  commander-entries.json  ids-valid.json
.cache/Yuriko%2C%20the%20Tiger's%20Shadow/: commander-entries.json  ids-valid.json
.cache/commanders/: Kraum%2C%20Ludevic's%20Opus%20%2F%20Tymna%20the%20Weaver.json  Thrasios%2C%20Triton%20Hero%20%2F%20Tymna%20the%20Weaver.json
.github/workflows/: deploy.yaml  node.js.yml  release.yml
crates/cache/: Cargo.toml
crates/store/: Cargo.toml
crates/top_sixteen/: Cargo.toml
crates/types/: Cargo.toml
scripts/: fetch-card-info.ts  fetch-lists.ts  join-lists.ts
src/: app.html  cache.rs  command.rs  data_structures.rs  data_utils.rs  main.rs  main.ts  moxfield.rs  store.rs
src/cache/: cache.rs  commander_cache.rs  mod.rs
src/command/: all_cards.rs  cards_in_top_decks.rs  compare.rs  find_clusters.rs  mod.rs  prefetch.rs  search_decks_for_card.rs  setup_env.rs  win_rate_per_card.rs  wip.rs  work.rs
src/commands/: index.ts
src/components/: mana-cost.svelte  mana.svelte
src/data/: edh_top_sixteen.rs  mod.rs  moxfield.rs
src/data_structures/: card.rs  card_list_id_map.rs  commander.rs  deck_id.rs  deck_list.rs  entries.rs  entry.rs  id_deck_list.rs  id_win_rate.rs
src/data_types/: card.rs  card_deck_id_set_map.rs  commander.rs  deck_entry.rs  deck_entry_list.rs  deck_id.rs  deck_id_deck_list_map.rs  deck_id_set.rs  (+8 more)
(+971 files in other folders)
