[package]
name = "cedh-stats"
version = "0.1.0"
edition = "2021"

[dependencies]
types = { path = "./crates/types" }
store = { path = "./crates/store" }
clap = { version = "4.5.20", features = ["derive", "env"] }
tokio = { version = "1.41.1", features = ["full"] }
#serde = { version = "1.0.215", features = ["derive"] }
#ndarray = { version = "0.16.1", features = ["serde"] }
#num-traits = "0.2.19"
anyhow = "1.0.93"
indicatif = "0.17.9"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
#headless_chrome = "1.0.15"
dotenv = "0.15.0"

[workspace]
members = [
    "crates/cache",
    "crates/types",
    "crates/store",
    "crates/top_sixteen"
]
